--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/styles/style.css">
     <link rel="stylesheet" href="src/assets/fonts/fonts.css">
     <script defer rel="script" src="./src/js/index.js"></script>
     <title>Registration form</title>
